--- a/template/index.jade
+++ b/template/index.jade
@@ -11,15 +11,16 @@ block content
 				.col-lg-8
 					.header__title
 						h1 Создание сайтов и&nbspлендингов
-						p Помогу показать и&nbspпродвинуть продукт или&nbspуслугу.
+						p.header__title__text Помогу показать и&nbspпродвинуть продукт или&nbspуслугу
 				.col-lg-4
 					.header__myself.myself
 						.row
-							.col-xl-3.col-lg-4.col-md-2.col-sm-3.col-4
-								img(class="myself__face" src="img/face.png" alt="Иван Лихачев")
-							.col-xl-9.col-lg-8.col-md-10.col-sm-9.col-8
-								p.myself__name Иван Лихачев
-								p.myself__description.text_sm Работаю дизайнером с&nbsp2010&nbspгода. Живу в&nbspМагнитогорске
+							.col-xl-4.col-lg-4.col-md-2.col-sm-3.col-4
+								img(class="myself__face" src="img/face.jpg" alt="Иван Лихачев")
+							.col-xl-8.col-lg-8.col-md-10.col-sm-9.col-8
+								.myself__info
+									.myself__name Иван Лихачев
+									p.myself__description Работаю дизайнером с&nbsp2010&nbspгода. Живу в&nbspМагнитогорске
 
 	.filter
 		.container-fluid
@@ -42,27 +43,21 @@ block content
 						img(src="img/projects/avtoteam74.jpg", alt="").item__img
 					.item__name 
 						a(href="http://avtoteam74.ru").link Лендинг компании AvtoTeam74
-					.item__description 
-						p Ведение проекта, дизайн и&nbspверстка
-					.item__time Январь 2018
+					.item__time Ведение проекта, дизайн и&nbspверстка. Январь 2018
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					a(href="http://muzbay.ru")
 						img(src="img/projects/muzbay.jpg", alt="").item__img
 					.item__name 
 						a(href="http://muzbay.ru").link Muzbay. Педалборды и гитарные ремни
-					.item__description 
-						p Ведение проекта, дизайн и&nbspверстка
-					.item__time Декабрь 2017
+					.item__time Ведение проекта, дизайн и&nbspверстка. Декабрь 2017
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net")
 						img(src="img/projects/hideman_site.jpg", alt="").item__img
 					.item__name 
 						a(href="https://www.hideman.net").link 3-я версия сайта Hideman VPN
-					.item__description 
-						p Дизайн и&nbspверстка
-					.item__time Середина 2017
+					.item__time Дизайн и&nbspверстка. 2017
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					a(href="https://tyugaev.github.io/number-divider/")
@@ -70,78 +65,60 @@ block content
 					.item__name 
 						a(href="https://tyugaev.github.io/number-divider/").link number-divider.js
 					.item__description 
-						p jQuery плагин, который разбивает числа по формату. Ведение проекта, дизайн и&nbspверстка
-					.item__time Начало 2017
+						p jQuery плагин, который разбивает числа по формату.
+					.item__time Ведение проекта, дизайн и&nbspверстка. 2017
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					img(src="img/projects/pivoprovod.jpg", alt="").item__img
-					.item__name Пивопровод
-					.item__description 
-						p Сайт доставки пива. Ведение проекта, дизайн и&nbspверстка
-					.item__time Середина 2014
+					.item__name Сайт доставки пива «Пивопровод»
+					.item__time Ведение проекта, дизайн и&nbspверстка. 2014
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net/en/docs/download-page/chrome/")
 						img(src="img/projects/hideman_chrome.png", alt="").item__img
 					.item__name 
 						a(href="https://www.hideman.net/en/docs/download-page/chrome/").link Расширение Hideman VPN для&nbspГугл Хрома
-					.item__description 
-						p Дизайн и&nbspверстка
-					.item__time Начало 2017
+					.item__time Дизайн и&nbspверстка. 2017
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net/en/docs/download-page/macos/")
 						img(src="img/projects/hideman_mac.png", alt="").item__img
 					.item__name 
 						a(href="https://www.hideman.net/en/docs/download-page/macos/").link Hideman VPN для&nbspmacOS
-					.item__description 
-						p Дизайн
-					.item__time 2016
+					.item__time Дизайн. 2016
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net/en/docs/download-page/ios/")
 						img(src="img/projects/hideman_ios.png", alt="").item__img.item__img_noround
 					.item__name 
 						a(href="https://www.hideman.net/en/docs/download-page/ios/").link Hideman VPN для&nbspайфона и&nbspайпада
-					.item__description 
-						p Дизайн
-					.item__time 2016
+					.item__time Дизайн. 2016
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net/en/docs/download-page/android/")
 						img(src="img/projects/hideman_android.png", alt="").item__img.item__img_noround
 					.item__name 
 						a(href="https://www.hideman.net/en/docs/download-page/android/").link Hideman VPN для&nbspАндройда
-					.item__description 
-						p Дизайн
-					.item__time 2016
+					.item__time Дизайн. 2016
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					img(src="img/projects/skycinema.png", alt="").item__img.item__img_noround
 					.item__name Сайт кинотеатра Sky-cinema
-					.item__description 
-						p Ведение проекта, дизайн и&nbspверстка
-					.item__time 2015
+					.item__time Ведение проекта, дизайн и&nbspверстка. 2015
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					img(src="img/projects/hideman_logo.png", alt="").item__img.item__img_noround
 					.item__name Логотип Hideman VPN
-					.item__description 
-						p Ведение проекта, дизайн и&nbspверстка
 					.item__time 2015
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					img(src="img/projects/tarelka.png", alt="").item__img.item__img_noround
-					.item__name Тарелка
-					.item__description 
-						p Сайт доставки еды. Дизайн и&nbspверстка
-					.item__time 2015
+					.item__name Сайт доставки еды «Тарелка»
+					.item__time Дизайн и&nbspверстка. 2015
 
 				.item.grid-item.col-xl-4.col-md-6.site
 					img(src="img/projects/dinix_logo.png", alt="").item__img.item__img_noround
-					.item__name Тарелка
-					.item__description 
-						p Логотип веб-студии Dinix
+					.item__name Логотип веб-студии Dinix
 					.item__time 2013
 
 
@@ -149,18 +126,20 @@ block content
 		.container-fluid
 			.row
 				.col-lg-12
-					.footer__contact Почта: 
-						a.link_noborder(href="mailto:design@dinix.ru") design@dinix.ru
-					.footer__contact
-						a.link(href="https://vk.com/lihachev_ivan") vk.com/lihachev_ivan
 					.footer__contact
 						a.link_noborder(href="tel:79068991681") +7 906 899-16-81
+					.footer__contact
+						a.link(href="https://vk.com/lihachev_ivan") vk.com/lihachev_ivan
+					.footer__contact почта: 
+						a.link_noborder(href="mailto:design@dinix.ru") design@dinix.ru
+					
 			.row
 				.col-lg-10
-					.likely.likely-light.likely-big(data-url="http://zaverstal.ru")
-						.vkontakte Поделиться
-						.facebook Поделиться
-						.twitter Твитнуть
+					.footer__likely
+						.likely.likely-light.likely-big(data-url="http://zaverstal.ru")
+							.vkontakte Поделиться
+							.facebook Поделиться
+							.twitter Твитнуть
 				.col-lg-2 
 					.footer__copy &copy; 2016
 
