--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Ubuntu");
-@import url("https://fonts.googleapis.com/css?family=Merriweather:300");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700,900");
+@import url("https://fonts.googleapis.com/css?family=Merriweather:300,700");
 html, body {
   width: 100%; }
 
@@ -11,7 +11,8 @@ html {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b51a0', endColorstr='#40abdf',GradientType=1 ); }
 
 body {
-  font: 21px 'Ubuntu', Helvetica, Arial, sans-serif;
+  font: 21px 'Source Sans Pro', Helvetica, Arial, sans-serif;
+  font-weight: 400;
   color: #fff;
   margin: 0 auto;
   padding: 1em 2% 0;
@@ -33,10 +34,9 @@ body {
   clear: both; }
 
 h1 {
-  font-family: 'Merriweather', serif;
-  font-weight: 300;
-  font-size: 2.8em;
-  line-height: 1.2em;
+  font-weight: 900;
+  font-size: 4em;
+  line-height: 0.9em;
   padding: 0 0 0.25em 0; }
 
 h3 {
@@ -45,17 +45,20 @@ h3 {
 
 p {
   color: #fff;
-  line-height: 1.4em; }
+  line-height: 1.2em;
+  opacity: 0.8; }
 
 img {
   width: 100%;
   max-width: 100%; }
 
-.text_md {
+.text_lg, .header__title__text, .myself__name, .item__name, .footer__contact {
+  font-size: 1.2em; }
+.text_md, .item__description {
   font-size: 1em; }
-.text_sm, .item__description, .filter__button {
+.text_sm, .item__time, .filter__button {
   font-size: 0.8em; }
-.text_xs, .item__time {
+.text_xs {
   font-size: 0.65em; }
 
 .round {
@@ -88,19 +91,25 @@ img {
   max-width: 100%;
   border-radius: 100px; }
 .myself__name {
-  padding: 0em 0 0; }
+  font-weight: 700; }
+.myself__info {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; }
 
 .title {
   padding: 0 30px 1.5em; }
 
 .item {
-  margin-bottom: 2em; }
+  margin-bottom: 3em; }
   .item__img {
     margin-bottom: 0.33em;
     border-radius: 25px; }
     .item__img_noround {
       border-radius: 0px; }
   .item__name {
+    font-weight: 700;
     padding-bottom: .25em; }
   .item__description {
     margin-bottom: 0.5em; }
@@ -123,7 +132,8 @@ img {
     float: left;
     margin-right: 30px; }
   .footer__copy {
-    padding-top: 0.25em; }
+    padding-top: 0.25em;
+    opacity: .5; }
 
 .likely {
   vertical-align: top; }
@@ -154,24 +164,31 @@ img {
 .button-checked {
   background: #000; }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
   h1 {
-    font-size: 2.2em;
-    padding: 0.5em 0; }
+    font-size: 3.6em; }
+
+  .myself__info {
+    justify-content: center; } }
+@media screen and (max-width: 992px) {
+  h1 {
+    font-size: 3em;
+    padding: 0 0 0.25em 0; }
 
   p {
     margin-bottom: 0px; } }
-@media screen and (max-width: 640px) {
-  body {
-    padding-top: 0px; }
-
+@media screen and (max-width: 768px) {
+  .footer__copy {
+    padding-top: 3em; }
+  .footer__likely {
+    padding-top: 1em; } }
+@media screen and (max-width: 576px) {
   h1 {
-    font-size: 1.8em;
-    font-family: 'Ubuntu';
-    line-height: 1.1em; }
+    font-size: 2em;
+    line-height: 1em; }
 
   p {
-    line-height: 1.2em; }
+    line-height: 1.1em; }
 
   .myself__name {
     padding: 0px; }
