--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ img {
   border-radius: 100px; }
 .myself__name {
   font-weight: 700; }
-.myself__info {
+.myself__info, .myself__img {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -176,7 +176,12 @@ img {
     padding: 0 0 0.25em 0; }
 
   p {
-    margin-bottom: 0px; } }
+    margin-bottom: 0px; }
+
+  .myself__img {
+    justify-content: center; }
+  .myself__name {
+    margin-top: -0.25em; } }
 @media screen and (max-width: 768px) {
   .footer__copy {
     padding-top: 3em; }
@@ -190,7 +195,7 @@ img {
   p {
     line-height: 1.1em; }
 
-  .myself__name {
+  .myself__name, .myself__img {
     padding: 0px; }
 
   .item__img {
