--- a/css/style.scss
+++ b/css/style.scss
@@ -133,7 +133,7 @@ img{
     }
     &__description{
     }
-    &__info{
+    &__info, &__img{
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -269,6 +269,15 @@ img{
         margin-bottom: 0px;
     }
 
+     .myself{
+        &__img{
+            justify-content: center;
+        }
+        &__name{
+            margin-top: -0.25em;
+        }
+    }
+
 }
 
 @media screen and (max-width: 768px) {
@@ -296,7 +305,7 @@ img{
     }
 
     .myself{
-        &__name{
+        &__name, &__img{
             padding: 0px;
         }
     }
