--- a/template/index.jade
+++ b/template/index.jade
@@ -16,7 +16,8 @@ block content
 					.header__myself.myself
 						.row
 							.col-xl-4.col-lg-4.col-md-2.col-sm-3.col-4
-								img(class="myself__face" src="img/face.jpg" alt="Иван Лихачев")
+								.myself__img
+									img(class="myself__face" src="img/face.jpg" alt="Иван Лихачев")
 							.col-xl-8.col-lg-8.col-md-10.col-sm-9.col-8
 								.myself__info
 									.myself__name Иван Лихачев
