--- a/css/style.scss
+++ b/css/style.scss
@@ -24,6 +24,7 @@ html{
 body{
 	font: 21px 'Source Sans Pro', Helvetica, Arial, sans-serif;
     font-weight: 400;
+    max-width: 1920px;
 	color: #fff;
     margin: 0 auto;
     padding: 1em 2% 0;
