--- a/template/index.jade
+++ b/template/index.jade
@@ -10,8 +10,8 @@ block content
 			.row
 				.col-lg-8
 					.header__title
-						h1 Создание сайтов и&nbspлендингов
-						p.header__title__text Помогу показать и&nbspпродвинуть продукт или&nbspуслугу
+						h1 Создание лендингов под&nbspключ
+						p.header__title__text С бесплатным, пожизненным хостингом
 				.col-lg-4
 					.header__myself.myself
 						.row
