--- a/template/index.jade
+++ b/template/index.jade
@@ -9,11 +9,11 @@ block content
 		.container-fluid
 			.row
 				.col-lg-8
-					.header__title
+					.header__title.emerge
 						h1 Создание лендингов под&nbspключ
 						p.header__title__text С бесплатным, пожизненным хостингом
 				.col-lg-4
-					.header__myself.myself
+					.header__myself.myself.emerge
 						.row
 							.col-xl-4.col-lg-4.col-md-2.col-sm-3.col-4
 								.myself__img
@@ -39,28 +39,28 @@ block content
 			.row.grid
 				.grid-sizer.col-xl-4.col-md-6
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					a(href="http://avtoteam74.ru")
 						img(src="img/projects/avtoteam74.jpg", alt="").item__img
 					.item__name 
 						a(href="http://avtoteam74.ru").link Лендинг компании AvtoTeam74
 					.item__time Ведение проекта, дизайн и&nbspверстка. Январь 2018
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					a(href="http://muzbay.ru")
 						img(src="img/projects/muzbay.jpg", alt="").item__img
 					.item__name 
 						a(href="http://muzbay.ru").link Muzbay. Педалборды и гитарные ремни
 					.item__time Ведение проекта, дизайн и&nbspверстка. Декабрь 2017
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net")
 						img(src="img/projects/hideman_site.jpg", alt="").item__img
 					.item__name 
 						a(href="https://www.hideman.net").link 3-я версия сайта Hideman VPN
 					.item__time Дизайн и&nbspверстка. 2017
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					a(href="https://tyugaev.github.io/number-divider/")
 						img(src="img/projects/number-divider.png", alt="").item__img
 					.item__name 
@@ -69,55 +69,55 @@ block content
 						p jQuery плагин, который разбивает числа по формату.
 					.item__time Ведение проекта, дизайн и&nbspверстка. 2017
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					img(src="img/projects/pivoprovod.jpg", alt="").item__img
 					.item__name Сайт доставки пива «Пивопровод»
 					.item__time Ведение проекта, дизайн и&nbspверстка. 2014
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net/en/docs/download-page/chrome/")
 						img(src="img/projects/hideman_chrome.png", alt="").item__img
 					.item__name 
 						a(href="https://www.hideman.net/en/docs/download-page/chrome/").link Расширение Hideman VPN для&nbspГугл Хрома
 					.item__time Дизайн и&nbspверстка. 2017
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net/en/docs/download-page/macos/")
 						img(src="img/projects/hideman_mac.png", alt="").item__img
 					.item__name 
 						a(href="https://www.hideman.net/en/docs/download-page/macos/").link Hideman VPN для&nbspmacOS
 					.item__time Дизайн. 2016
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net/en/docs/download-page/ios/")
 						img(src="img/projects/hideman_ios.png", alt="").item__img.item__img_noround
 					.item__name 
 						a(href="https://www.hideman.net/en/docs/download-page/ios/").link Hideman VPN для&nbspайфона и&nbspайпада
 					.item__time Дизайн. 2016
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net/en/docs/download-page/android/")
 						img(src="img/projects/hideman_android.png", alt="").item__img.item__img_noround
 					.item__name 
 						a(href="https://www.hideman.net/en/docs/download-page/android/").link Hideman VPN для&nbspАндройда
 					.item__time Дизайн. 2016
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					img(src="img/projects/skycinema.png", alt="").item__img.item__img_noround
 					.item__name Сайт кинотеатра Sky-cinema
 					.item__time Ведение проекта, дизайн и&nbspверстка. 2015
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					img(src="img/projects/hideman_logo.png", alt="").item__img.item__img_noround
 					.item__name Логотип Hideman VPN
 					.item__time 2015
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					img(src="img/projects/tarelka.png", alt="").item__img.item__img_noround
 					.item__name Сайт доставки еды «Тарелка»
 					.item__time Дизайн и&nbspверстка. 2015
 
-				.item.grid-item.col-xl-4.col-md-6.site
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					img(src="img/projects/dinix_logo.png", alt="").item__img.item__img_noround
 					.item__name Логотип веб-студии Dinix
 					.item__time 2013
