--- a/template/layout/main.jade
+++ b/template/layout/main.jade
@@ -12,16 +12,17 @@ html(lang="ru-RU")
 		link(href="css/bootstrap.grid.css" rel="stylesheet" type="text/css")
 		link(href="plugins/fotorama/fotorama.css" rel="stylesheet" type="text/css")
 		link(href="plugins/likely/likely.css" rel="stylesheet" type="text/css")
+	body
+
+		block content
+
+		include ../modules/google.html
+		include ../modules/yandex.html
+
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
 		script(src="https://masonry.desandro.com/masonry.pkgd.js")
 		script(src="js/js.js")
 		script(src="plugins/imagesloaded/imagesloaded.js")
 		script(src="plugins/fotorama/fotorama.js")
 		script(src="plugins/likely/likely.js")
-	body
-
-		
-		block content
-
-		include ../modules/google.html
-		include ../modules/yandex.html
+		script(src="plugins/emerge.js")
