--- a/template/layout/main.jade
+++ b/template/layout/main.jade
@@ -3,6 +3,7 @@ html(lang="ru-RU")
 	head
 		meta(http-equiv="Content-Type" content="text/html, charset=utf-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
+		meta(property="og:image" content="img/face.jpg")
 		title
 			block title
 		link(rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32")
@@ -20,9 +21,10 @@ html(lang="ru-RU")
 		include ../modules/yandex.html
 
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
-		script(src="https://masonry.desandro.com/masonry.pkgd.js")
+		script(src="plugins/emerge.js")
 		script(src="js/js.js")
+		script(src="https://masonry.desandro.com/masonry.pkgd.js")
 		script(src="plugins/imagesloaded/imagesloaded.js")
 		script(src="plugins/fotorama/fotorama.js")
 		script(src="plugins/likely/likely.js")
-		script(src="plugins/emerge.js")
+		
