--- a/template/layout/main.jade
+++ b/template/layout/main.jade
@@ -2,12 +2,11 @@ doctype html
 html(lang="ru-RU")
 	head
 		meta(http-equiv="Content-Type" content="text/html, charset=utf-8")
-		meta(name="viewport" content="width=device-width, initial-scale=1")
+		meta(name="viewport" content="width=device-width, initial-scale=0.85")
 		meta(property="og:image" content="img/face.jpg")
 		title
 			block title
-		link(rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32")
-		link(rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16")
+		link(rel="icon" type="image/png" href="img/favicon.ico")
 		link(href="css/reset.css" rel="stylesheet" type="text/css")
 		link(href="css/style.css" rel="stylesheet" type="text/css")
 		link(href="css/bootstrap.grid.css" rel="stylesheet" type="text/css")
