--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700,900");
-@import url("https://fonts.googleapis.com/css?family=Merriweather:300,700");
 html, body {
   width: 100%; }
 
@@ -11,12 +10,12 @@ html {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b51a0', endColorstr='#40abdf',GradientType=1 ); }
 
 body {
-  font: 21px 'Source Sans Pro', Helvetica, Arial, sans-serif;
+  font: 23px 'Source Sans Pro', Helvetica, Arial, sans-serif;
   font-weight: 400;
   max-width: 1920px;
-  color: #fff;
   margin: 0 auto;
-  padding: 1em 2% 0;
+  color: #fff;
+  padding: 1em 0 0;
   -webkit-font-smoothing: antialiased; }
 
 *:focus {
@@ -46,21 +45,7 @@ h3 {
 
 p {
   color: #fff;
-  line-height: 1.2em;
-  opacity: 0.8; }
-
-img {
-  width: 100%;
-  max-width: 100%; }
-
-.text_lg, .header__title__text, .myself__name, .item__name, .footer__contact {
-  font-size: 1.2em; }
-.text_md, .item__description {
-  font-size: 1em; }
-.text_sm, .item__time, .filter__button {
-  font-size: 0.8em; }
-.text_xs {
-  font-size: 0.65em; }
+  line-height: 1.2em; }
 
 .round {
   border-radius: 8px; }
@@ -76,44 +61,79 @@ img {
   .link:hover, .link:active,
   .link_noborder:hover,
   .link_noborder:active {
-    opacity: 0.65;
-    border-bottom: 1px solid rgba(24, 123, 226, 0.25); }
+    opacity: 0.65; }
 
-.header {
-  padding: 0 0 1em; }
-  .header__title {
-    padding-bottom: 2em; }
-  .header__myself {
-    padding-bottom: 2em; }
-
-.myself__face {
-  display: inline-block;
-  width: 100%;
-  max-width: 100%;
-  border-radius: 100px; }
-.myself__name {
-  font-weight: 700; }
-.myself__info, .myself__img {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start; }
+.text-center {
+  text-align: center; }
+.text-right {
+  text-align: right; }
+.text-sm {
+  font-size: 0.7em; }
+.text-md, .header__hello {
+  font-size: 1em; }
+.text-lg, .title, .header__text, .offer__title, .footer__contact__item {
+  font-size: 1.6em; }
+.text-xl, .header__name {
+  font-size: 3em; }
 
 .title {
-  padding: 0 30px 1.5em; }
+  font-weight: 700; }
+
+.container-fluid {
+  padding: 0 30px !important; }
+
+.section {
+  padding: 5em 0; }
+  .section-offer {
+    padding: 0 30px; }
+
+.menu__contact {
+  display: inline-block;
+  margin: 0 0 0 30px; }
+
+.header__logo {
+  font-weight: 700; }
+  .header__logo__img {
+    margin-right: 5px; }
+.header__hello {
+  padding-bottom: 0.25em; }
+.header__name {
+  font-weight: 700;
+  line-height: 1.1em;
+  padding: 0 0 0.15em 0; }
+.header__text {
+  font-weight: 400; }
+.header__face {
+  display: inline-block;
+  width: 100%;
+  max-width: 350px;
+  border-radius: 300px; }
+
+.offer {
+  background: rgba(0, 0, 0, 0.05);
+  padding: 5em 0;
+  border-radius: 25px; }
+  .offer__img {
+    margin-bottom: 1em; }
+  .offer__title {
+    font-weight: bold;
+    line-height: 1.1em; }
+
+.work__title {
+  padding-bottom: 1em; }
 
 .item {
   margin-bottom: 3em; }
   .item__img {
     margin-bottom: 0.33em;
-    border-radius: 25px; }
+    border-radius: 25px;
+    max-width: 100%;
+    width: 100%; }
     .item__img_noround {
       border-radius: 0px; }
   .item__name {
     font-weight: 700;
     padding-bottom: .25em; }
-  .item__description {
-    margin-bottom: 0.5em; }
   .item__time {
     opacity: 0.33; }
   .item:hover .link {
@@ -124,53 +144,27 @@ img {
     transform: none; }
 
 .footer {
-  padding: 4em 0px 2em;
-  position: relative; }
+  background: #222;
+  padding: 5em 0; }
+  .footer__title {
+    padding-bottom: 2em; }
   .footer__line {
     border-top: 2px solid rgba(255, 255, 255, 0.05); }
   .footer__contact {
+    padding-bottom: 2em; }
+  .footer__contact__item {
     margin-bottom: 1em;
-    float: left;
+    display: inline-block;
     margin-right: 30px; }
+  .footer__likely {
+    padding-bottom: 2em; }
   .footer__copy {
     padding-top: 0.25em;
-    opacity: .5; }
+    opacity: .3; }
 
 .likely {
   vertical-align: top; }
 
-.filter {
-  display: none;
-  padding-bottom: 1.25em; }
-  .filter__group {
-    display: inline-block; }
-  .filter__button {
-    float: left;
-    color: #fff;
-    display: inline-block;
-    background: none;
-    padding: 4px 12px;
-    border-radius: 0;
-    border-left: none;
-    border-top: none;
-    border-right: none;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.05);
-    margin: 0 0 0 0; }
-    .filter__button_checked {
-      border-bottom: 2px solid rgba(0, 0, 0, 0.5);
-      color: rgba(0, 0, 0, 0.75); }
-    .filter__button:hover {
-      opacity: 0.75; }
-
-.button-checked {
-  background: #000; }
-
-@media screen and (max-width: 1200px) {
-  h1 {
-    font-size: 3.6em; }
-
-  .myself__info {
-    justify-content: center; } }
 @media screen and (max-width: 992px) {
   h1 {
     font-size: 3em;
@@ -179,25 +173,37 @@ img {
   p {
     margin-bottom: 0px; }
 
-  .myself__img {
-    justify-content: center; }
-  .myself__name {
-    margin-top: -0.25em; } }
-@media screen and (max-width: 768px) {
-  .footer__copy {
-    padding-top: 3em; }
-  .footer__likely {
-    padding-top: 1em; } }
-@media screen and (max-width: 576px) {
-  h1 {
-    font-size: 2em;
-    line-height: 1em; }
+  .section {
+    padding: 0 0 3em 0; }
+    .section-header {
+      padding-left: 15px;
+      padding-right: 15px; }
+    .section-offer {
+      padding: 0 30px; }
 
-  p {
-    line-height: 1.1em; }
+  .offer {
+    padding: 2em 1em 1em; }
+    .offer__block {
+      padding: 0 0 3em 0; }
 
-  .myself__name, .myself__img {
-    padding: 0px; }
+  .menu {
+    display: none; }
 
-  .item__img {
-    border-radius: 20px; } }
+  .header__face {
+    margin-bottom: 20px; }
+
+  .text-left {
+    text-align: left; }
+
+  .text-center {
+    text-align: center; }
+  .text-right {
+    text-align: right; }
+  .text-sm {
+    font-size: 0.7em; }
+  .text-md, .header__hello {
+    font-size: 0.8em; }
+  .text-lg, .title, .header__text, .offer__title, .footer__contact__item {
+    font-size: 1.2em; }
+  .text-xl, .header__name {
+    font-size: 2em; } }
