--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700,900');
-@import url('https://fonts.googleapis.com/css?family=Merriweather:300,700');
 
 $theme: #4598d0;
 $red: #187be2;
@@ -22,12 +21,12 @@ html{
 }
 
 body{
-	font: 21px 'Source Sans Pro', Helvetica, Arial, sans-serif;
+	font: 23px 'Source Sans Pro', Helvetica, Arial, sans-serif;
     font-weight: 400;
     max-width: 1920px;
-	color: #fff;
     margin: 0 auto;
-    padding: 1em 2% 0;
+	color: #fff;
+    padding: 1em 0 0;
     -webkit-font-smoothing: antialiased;
 }
 
@@ -66,29 +65,8 @@ h3{
 p{
 	color: #fff;
 	line-height: 1.2em;
-    // margin-bottom: 0.5em;
-    opacity: 0.8;
 }
 
-img{
-    width: 100%;
-    max-width: 100%;
-}
-
-.text{
-    &_lg{
-        font-size: 1.2em;
-    }
-    &_md{
-        font-size: 1em;
-    }
-    &_sm{
-        font-size: 0.8em;
-    }
-    &_xs{
-        font-size: 0.65em;
-    }
-}
 
 .round{
     border-radius: $round;
@@ -104,68 +82,123 @@ img{
     }
 	&:hover, &:active{
         opacity: 0.65;
-        border-bottom: 1px solid $red-l;
 	}
 }
 
-.header{
-	padding: 0 0 1em;
-    &__title{
-        padding-bottom: 2em;
-        &__text{
-            @extend .text_lg;
-        }
+.text{
+    &-center{
+        text-align: center;
     }
-    &__myself{
-        padding-bottom: 2em;
+    &-right{
+        text-align: right;
     }
-}
-
-.myself{
-    &__face{
-        display: inline-block;
-        width: 100%;
-        max-width: 100%;
-        border-radius: 100px;
+    &-sm{
+        font-size: 0.7em;
     }
-    &__name{
-        @extend .text_lg;
-        font-weight: 700;
+    &-md{
+        font-size: 1em;
     }
-    &__description{
+    &-lg{
+        font-size: 1.6em;
     }
-    &__info, &__img{
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
+    &-xl{
+        font-size: 3em;
     }
 }
 
 .title{
-    padding: 0 30px 1.5em;
+    @extend .text-lg;
+    font-weight: 700;
 }
+
+.container-fluid{
+    padding: 0 30px !important;
+}
+
+.section{
+    padding: 5em 0;
+    &-offer{
+        padding: 0 30px;
+    }
+}
+
+.menu{
+    &__contact{
+        display: inline-block;
+        margin:  0 0 0 30px;
+    }
+}
+
+.header{
+    &__logo{
+        font-weight: 700;
+        &__img{
+            margin-right: 5px;
+        }
+    }
+    &__hello{
+        @extend .text-md;
+        padding-bottom: 0.25em;
+    }
+    &__name{
+        @extend .text-xl;
+        font-weight: 700;
+        line-height: 1.1em;
+        padding: 0 0 0.15em 0;
+    }
+    &__text{
+        @extend .text-lg;
+        font-weight: 400;
+    }
+    &__face{
+        display: inline-block;
+        width: 100%;
+        max-width: 350px;
+        border-radius: 300px;
+    }
+}
+
+.offer{
+    background: rgba(0,0,0,0.05);
+    padding: 5em 0;
+    border-radius: 25px;
+    &__img{
+        margin-bottom: 1em;
+    }
+    &__title{
+        @extend .text-lg;
+        font-weight: bold;
+        line-height: 1.1em;
+    }
+}
+
+.work{
+    // background: rgba(0,0,0,0.05);
+    &__title{
+        padding-bottom: 1em;
+    }
+}
+
+
 
 .item{
     margin-bottom: 3em;
 	&__img{
 		margin-bottom: 0.33em;
         border-radius: 25px;
+        max-width: 100%;
+        width: 100%;
         &_noround{
              border-radius: 0px;
         }
 	}
 	&__name{
-        @extend .text_lg;
         font-weight: 700;
 		padding-bottom: .25em;
 	}
 	&__description{
-        @extend .text_md;
-		margin-bottom: 0.5em;
 	}
     &__time{
-        @extend .text_sm;
         opacity: 0.33;
     }
 	&:hover .link{
@@ -182,20 +215,31 @@ img{
 }
 
 .footer{
-	padding: 4em 0px 2em;
-    position: relative;
+    // background: rgba(0,0,0,0.75);
+    background:#222;
+	padding: 5em 0;
+    // border-radius: 25px 25px 0 0;
+    &__title{
+        padding-bottom: 2em;
+    }
     &__line{
         border-top: 2px solid rgba(255, 255, 255, 0.05);
     }
-	&__contact{
-        @extend .text_lg;
+    &__contact{
+        padding-bottom: 2em;
+    }
+	&__contact__item{
+        @extend .text-lg;
 		margin-bottom: 1em;
-        float: left;
+        display: inline-block;
         margin-right: 30px;
 	}
+    &__likely{
+        padding-bottom: 2em;
+    }
     &__copy{
         padding-top: 0.25em;
-        opacity: .5;
+        opacity: .3;
     }
 }
 
@@ -203,59 +247,9 @@ img{
     vertical-align: top;
 }
 
-.filter{
-    display: none;
-    padding-bottom: 1.25em;
-    &__group{
-        display: inline-block;
-    }
-    &__button{
-        @extend .text_sm;
-        float: left;
-        color: #fff;
-        display: inline-block;
-        // background: rgba(0,0,0,0.1);
-        background: none;
-        padding: 4px 12px;
-        border-radius: 0;
-        border-left: none;
-        border-top: none;
-        border-right: none;
-        border-bottom: 2px solid rgba(255, 255, 255, 0.05);
-        margin: 0 0 0 0;
-        &_checked{
-            // background: rgba(0,0,0,0.25);
-            border-bottom: 2px solid rgba(0,0,0,0.5);
-            color: rgba(0,0,0,0.75);
-        }
-        &:hover{
-            opacity: 0.75;
-        }
-        // &:first-child{
-        //     border-radius: $round 0 0 $round;
-        // }
-        // &:last-child{
-        //     border-radius: 0 $round $round 0;
-        // }
-    }
-}
-
-.button-checked{
-    background:#000;
-}
-
 
 @media screen and (max-width: 1200px) {
 
-    h1{
-        font-size: 3.6em;
-    }
-
-    .myself{
-        &__info{
-            justify-content: center;
-        }
-    }
 
 }
 
@@ -270,12 +264,58 @@ img{
         margin-bottom: 0px;
     }
 
-     .myself{
-        &__img{
-            justify-content: center;
+    .section{
+        padding: 0 0 3em 0;
+        &-header{
+            padding-left: 15px;
+            padding-right: 15px;
         }
-        &__name{
-            margin-top: -0.25em;
+        &-offer{
+            padding: 0 30px;
+        }
+    }
+
+    .offer{
+        padding: 2em 1em 1em;
+        &__block{
+            padding: 0 0 3em 0;
+        }
+    }
+
+    .menu{
+        display: none;
+    }
+
+     .header{
+        &__face{
+            margin-bottom: 20px;
+        }
+    }
+
+    .text{
+        &-left{
+            text-align: left;
+        }
+    }
+
+    .text{
+        &-center{
+            text-align: center;
+        }
+        &-right{
+            text-align: right;
+        }
+        &-sm{
+            font-size: 0.7em;
+        }
+        &-md{
+            font-size: 0.8em;
+        }
+        &-lg{
+            font-size: 1.2em;
+        }
+        &-xl{
+            font-size: 2em;
         }
     }
 
@@ -283,39 +323,11 @@ img{
 
 @media screen and (max-width: 768px) {
 
-    .footer{
-        &__copy{
-            padding-top: 3em;
-        }
-        &__likely{
-            padding-top: 1em;
-        }
-    }
 
 }
 
 @media screen and (max-width: 576px) {
 
-    h1{
-        font-size: 2em;
-        line-height: 1em;
-    }
-    
-    p{
-        line-height: 1.1em;
-    }
-
-    .myself{
-        &__name, &__img{
-            padding: 0px;
-        }
-    }
-
-    .item{
-        &__img{
-            border-radius: 20px;
-        }
-    }
 
 }
 
