--- a/template/layout/main.jade
+++ b/template/layout/main.jade
@@ -12,6 +12,7 @@ html(lang="ru-RU")
 		link(href="css/bootstrap.grid.css" rel="stylesheet" type="text/css")
 		link(href="plugins/fotorama/fotorama.css" rel="stylesheet" type="text/css")
 		link(href="plugins/likely/likely.css" rel="stylesheet" type="text/css")
+		<style>.emerge { opacity: 0; }</style>
 	body
 
 		block content
