--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,9 @@ p {
     .offer__block {
       padding: 0 0 3em 0; }
 
+  .work__title {
+    padding: 2em 0 1em; }
+
   .menu {
     display: none; }
 
