--- a/template/index.jade
+++ b/template/index.jade
@@ -1,7 +1,7 @@
 extends layout/main
 
 block title
-	| Иван Лихачев. Создание сайтов и лендингов
+	| Иван Лихачев. Создание лендингов и мини-сайтов
 
 block content
 
