--- a/template/index.jade
+++ b/template/index.jade
@@ -16,7 +16,7 @@ block content
 					.menu__contact
 						a.link_noborder(href="tel:79068991681") +7 906 899-16-81
 					.menu__contact
-						a.link(href="https://vk.com/lihachev_ivan") vk.com/lihachev_ivan
+						a.link(href="https://vk.com/zaverstal_ru") Вконтакте
 					.menu__contact почта: 
 						a.link_noborder(href="mailto:design@dinix.ru") design@dinix.ru
 
@@ -156,7 +156,7 @@ block content
 							.footer__contact__item
 								a.link_noborder(href="tel:79068991681") +7 906 899-16-81
 							.footer__contact__item
-								a.link(href="https://vk.com/lihachev_ivan") vk.com/lihachev_ivan
+								a.link(href="https://vk.com/zaverstal_ru") Вконтакте
 							.footer__contact__item почта: 
 								a.link_noborder(href="mailto:design@dinix.ru") design@dinix.ru
 						
