--- a/template/index.jade
+++ b/template/index.jade
@@ -58,6 +58,13 @@ block content
 				.grid-sizer.col-xl-4.col-md-6
 
 				.item.grid-item.emerge.col-xl-4.col-md-6.site
+					a(href="http://muzbay.ru")
+						img(src="img/projects/muzbay.jpg", alt="").item__img
+					.item__name 
+						a(href="http://muzbay.ru").link Лендинг компании Muzbay
+					.item__time Ведение проекта, дизайн и&nbspверстка. Февраль 2017
+
+				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					a(href="http://glavmaket.ru")
 						img(src="img/projects/glavmaket.jpg", alt="").item__img
 					.item__name 
@@ -70,13 +77,6 @@ block content
 					.item__name 
 						a(href="http://avtoteam74.ru").link Лендинг компании AvtoTeam74
 					.item__time Ведение проекта, дизайн и&nbspверстка. Январь 2018
-
-				//- .item.grid-item.emerge.col-xl-4.col-md-6.site
-				//- 	a(href="http://muzbay.ru")
-				//- 		img(src="img/projects/muzbay.jpg", alt="").item__img
-				//- 	.item__name 
-				//- 		a(href="http://muzbay.ru").link Muzbay. Педалборды и гитарные ремни
-				//- 	.item__time Ведение проекта, дизайн и&nbspверстка. Декабрь 2017
 
 				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net")
