--- a/template/index.jade
+++ b/template/index.jade
@@ -71,12 +71,12 @@ block content
 						a(href="http://glavmaket.ru").link Сайт компании ГлавМакет
 					.item__time Ведение проекта, дизайн и&nbspверстка. Февраль 2018
 
-				.item.grid-item.emerge.col-xl-4.col-md-6.site
-					a(href="http://avtoteam74.ru")
-						img(src="img/projects/avtoteam74.jpg", alt="").item__img
-					.item__name 
-						a(href="http://avtoteam74.ru").link Лендинг компании AvtoTeam74
-					.item__time Ведение проекта, дизайн и&nbspверстка. Январь 2018
+				//- .item.grid-item.emerge.col-xl-4.col-md-6.site
+				//- 	a(href="http://avtoteam74.ru")
+				//- 		img(src="img/projects/avtoteam74.jpg", alt="").item__img
+				//- 	.item__name 
+				//- 		a(href="http://avtoteam74.ru").link Лендинг компании AvtoTeam74
+				//- 	.item__time Ведение проекта, дизайн и&nbspверстка. Январь 2018
 
 				.item.grid-item.emerge.col-xl-4.col-md-6.site
 					a(href="https://www.hideman.net")
