--- a/template/layout/main.jade
+++ b/template/layout/main.jade
@@ -27,4 +27,6 @@ html(lang="ru-RU")
 		script(src="plugins/imagesloaded/imagesloaded.js")
 		script(src="plugins/fotorama/fotorama.js")
 		script(src="plugins/likely/likely.js")
+		script(type="text/javascript" src="//cdn.callbackhunter.com/cbh.js?hunter_code=d1bbb706df7299fb506c2fb0d8fb7cdf" charset="UTF-8")
+
 		
